style.css
body {
    display: grid;
    place-items: center;
    font-size: 8vmin;
    background-color: #000;
    color: #555;
}

h1 {
    font-size: 1em;
    text-align: center;
}

input {
    font-size: 1em;
    width: 8em;
    margin-top: 0.5em;
    text-align: center;
    background-color: #555;
    color: #000;
}

table {
    text-align: center;
}

td {
    width: 10em;
}

.current_player {
    color: #0f0;
}

button {
    font-size: 1em;
    border: none;
    margin-top: 0.5em;
    background-color: #555;
    color: #000;
}

button:disabled {
    background-color: #000;
}

